BUG#30993: Subqueries: LooseScan strategy produces wrong query results, with duplicates:  - Made best_access_path() not to choose loose index scan when the index    is not covering